# TFG_inspeccion_plantas_termosolares

./: .gitmodules  README.md
simulacion/: general.launch.py
simulacion/config/: rviz.rviz
simulacion/faker_procesado/: CMakeLists.txt  package.xml
simulacion/faker_procesado/launch/: faker_procesado.launch.py
simulacion/faker_procesado/scripts/: area_camera_node.py  calcule_node.py  show_data_node.py
simulacion/interfaz_de_usuario/: CMakeLists.txt  package.xml
simulacion/interfaz_de_usuario/launch/: interfaz_basica.launch.py
simulacion/interfaz_de_usuario/scripts/: interfaz_feedback_node.py  interfaz_terminal_node.py
simulacion/metodo_de_calculo/: CMakeLists.txt  package.xml
simulacion/simulacion/: CMakeLists.txt  package.xml
simulacion/simulacion/launch/: simulacion.launch.py
simulacion/simulacion/models/: panel.sdf  torre.sdf
simulacion/simulacion/scripts/: Add_panels_from_file.py  Remove_panels_from_file.py  control_sim_node.py  load_map_node.py  mirar.sh  remove_tower.sh  world_generator.py
simulacion/simulacion/worlds/: Crescent_Dunes.csv  planta_termosolar.sdf  prueba1.sdf
simulacion/simulation_tools/: CMakeLists.txt  package.xml
simulacion/simulation_tools/models/: panel.sdf
simulacion/simulation_tools/scripts/: Add_panels_from_file.py  Remove_panels_from_file.py  add_panel.sh  add_tower.sh  control_sim_node.py  interfaz_terminal_node.py  world_generator.py
simulacion/simulation_tools/worlds/: prueba1.sdf  prueba2.sdf
simulacion/visualization_tools/: CMakeLists.txt  package.xml
simulacion/visualization_tools/config/: rviz.rviz
simulacion/visualization_tools/launch/: gazebo_log.txt  master_cli.py  visual_launch.launch.py  world_gazebo.launch.py
simulacion/visualization_tools/scripts/: calcule_node.py  mapa_3.txt  muestra_datos.py
simulacion/world_gazebo/: CMakeLists.txt  package.xml
simulacion/world_gazebo/launch/: world_gazebo.launch.py
simulacion/world_gazebo/worlds/: basketball_court.world
